--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
         <div v-if="!loaded" class="list-group-item">Loading</div>
         <div v-if="loaded && manifests.length == 0" class="list-group-item">Empty</div>
         <div v-for="manifest in manifests" class="list-group-item row">
-          <div class="col-xs-4"><span v-for="tag in manifest.tags" class="badge"><span class="glyphicon glyphicon-tag"></span> {{ tag }}</span></div>
-          <div class="col-xs-4"><span class="glyphicon glyphicon-list"></span> {{ manifest.layers.length }} layers</div>
-          <div class="col-xs-4"><span class="glyphicon glyphicon-compressed"></span> {{ manifest.size | bytestomb }} MB</div>
+          <div class="col-xs-3"><span v-for="tag in manifest.tags" class="badge"><span class="glyphicon glyphicon-tag"></span> {{ tag }}</span></div>
+          <div class="col-xs-3"><span class="glyphicon glyphicon-list"></span> {{ manifest.layers.length }} layers</div>
+          <div class="col-xs-3"><span class="glyphicon glyphicon-compressed"></span> {{ manifest.size | bytestomb }} MB</div>
+          <div class="col-xs-3 text-right"><a v-on:click="removeManifest(manifest.digest)" class="btn btn-xs btn-danger"><span class="glyphicon glyphicon-erase"></span></a></div>
         </div>
       </div>
     </div>
@@ -96,6 +97,12 @@
           this.opened = false
           this.loaded = false
           this.manifests = []
+        },
+
+        removeManifest: function(digest) {
+          axios.delete('/v2/' + this.repository + '/manifests/' + digest).then((res) => {
+            this.manifests = this.manifests.filter((m) => { return m.digest != digest })
+          })
         }
 
       }
