--- a/index.html
+++ b/index.html
@@ -26,12 +26,25 @@
       <div v-if="opened" class="list-group">
         <div v-if="!loaded" class="list-group-item">Loading</div>
         <div v-if="loaded && manifests.length == 0" class="list-group-item">Empty</div>
-        <div v-for="manifest in manifests" class="list-group-item row">
-          <div class="col-xs-3"><span v-for="tag in manifest.tags" class="badge"><rf-glyph ison="tag"></rf-glyph> {{ tag }}</span></div>
-          <div class="col-xs-3"><rf-glyph icon="list"></rf-glyph> {{ manifest.layers.length }} layers</div>
-          <div class="col-xs-3"><rf-glyph icon="compressed"></rf-glyph> {{ manifest.size | bytestomb }} MB</div>
-          <div class="col-xs-3 text-right"><a v-on:click="removeManifest(manifest.digest)" class="btn btn-xs btn-danger"><rf-glyph icon="erase"></rf-glyph></a></div>
-        </div>
+
+        <rf-manifest v-for="manifest in manifests" :manifest="manifest"></rf-manifest>
+      </div>
+    </div>
+  </script>
+
+  <script type="text/x-template" id="manifest-template">
+    <div class="list-group-item row">
+      <div class="col-xs-3">
+        <span v-for="tag in manifest.tags" class="badge"><rf-glyph ison="tag"></rf-glyph> {{ tag }}</span>
+      </div>
+      <div class="col-xs-3">
+        <rf-glyph icon="list"></rf-glyph> {{ manifest.layers.length }} layers
+      </div>
+      <div class="col-xs-3">
+        <rf-glyph icon="compressed"></rf-glyph> {{ manifest.size | bytestomb }} MB
+      </div>
+      <div class="col-xs-3 text-right">
+        <a v-on:click="removeManifest(manifest.digest)" class="btn btn-xs btn-danger"><rf-glyph icon="erase"></rf-glyph></a>
       </div>
     </div>
   </script>
@@ -44,6 +57,11 @@
     Vue.component('rf-glyph', {
       props: ['icon'],
       template: '<span :class="\'glyphicon glyphicon-\' + icon"></span>'
+    })
+
+    Vue.component('rf-manifest', {
+      props: ['manifest'],
+      template: '#manifest-template'
     })
 
     Vue.component('rf-repository', {
