--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <script type="text/x-template" id="manifest-template">
     <div class="list-group-item row">
       <div class="col-xs-3">
-        <span v-for="tag in manifest.tags" class="badge"><rf-glyph ison="tag"></rf-glyph> {{ tag }}</span>
+        <span v-for="tag in manifest.tags" class="badge"><rf-glyph icon="tag"></rf-glyph> {{ tag }}</span>
       </div>
       <div class="col-xs-3">
         <rf-glyph icon="list"></rf-glyph> {{ manifest.layers.length }} layers
