--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         </div>
       </div>
       <div v-if="opened" class="list-group">
-        <div v-if="!loaded" class="list-group-item">Loading</div>
-        <div v-if="loaded && manifests.length == 0" class="list-group-item">Empty</div>
+        <div v-if="!loaded" class="list-group-item"><rf-glyph icon="hourglass"></rf-glyph> Loading manifests</div>
+        <div v-if="loaded && manifests.length == 0" class="list-group-item"><rf-glyph icon="info-sign"></rf-glyph> No manifests in repository</div>
         <rf-manifest v-for="manifest in manifests" :manifest="manifest" :repository="repository" v-on:deleted="load"></rf-manifest>
       </div>
     </div>
