--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   </body>
 
   <script type="text/x-template" id="repository-template">
-    <div class="panel panel-default container-fluid">
-      <div class="panel-heading row">
-        <div v-if="opened" class="col-xs-6"><rf-glyph icon="folder-open"></rf-glyph> {{ repository }}</div>
-        <div v-else class="col-xs-6"><rf-glyph icon="folder-close"></rf-glyph> {{ repository }}</div>
-        <div class="col-xs-6 text-right">
-          <rf-glyphbutton v-if="opened" :click="close" look="default" icon="chevron-up"></rf-glyphbutton>
-          <rf-glyphbutton v-else :click="load" look="default" icon="chevron-down"></rf-glyphbutton>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <div class="row">
+          <div class="col-xs-6"><rf-glyph :icon="opened ? 'folder-open' : 'folder-close'"></rf-glyph> {{ repository }}</div>
+          <div class="col-xs-6 text-right">
+            <rf-glyphbutton :click="toggle" :icon="opened ? 'chevron-up' : 'chevron-down'"></rf-glyphbutton>
+          </div>
         </div>
       </div>
       <div v-if="opened" class="list-group">
@@ -32,20 +32,28 @@
   </script>
 
   <script type="text/x-template" id="manifest-template">
-    <div class="list-group-item row">
-      <div class="col-xs-3">
-        <span v-for="tag in manifest.tags" class="badge"><rf-glyph icon="tag"></rf-glyph> {{ tag }}</span>
-      </div>
-      <div class="col-xs-3">
-        <rf-glyph icon="list"></rf-glyph> {{ manifest.layers.length }} layers
-      </div>
-      <div class="col-xs-3">
-        <rf-glyph icon="compressed"></rf-glyph> {{ manifest.size | bytestomb }} MB
-      </div>
-      <div class="col-xs-3 text-right">
-        <rf-glyphbutton :click="remove" look="danger" icon="erase"></rf-glyphbutton>
+    <div class="list-group-item">
+      <div class="row">
+        <div class="col-xs-3">
+          <span v-for="tag in manifest.tags" class="badge"><rf-glyph icon="tag"></rf-glyph> {{ tag }}</span>
+        </div>
+        <div class="col-xs-3">
+          <rf-glyph icon="list"></rf-glyph> {{ manifest.layers.length }} layers
+        </div>
+        <div class="col-xs-3">
+          <rf-glyph icon="compressed"></rf-glyph> {{ manifest.size | bytestomb }} MB
+        </div>
+        <div class="col-xs-3 text-right">
+          <rf-glyphbutton :click="remove" look="danger" icon="erase"></rf-glyphbutton>
+        </div>
       </div>
     </div>
+  </script>
+
+  <script type="text/x-template" id="glyphbutton-template">
+    <a v-on:click="click" :class="'btn btn-xs btn-' + look">
+      <rf-glyph :icon="icon"></rf-icon><slot></slot>
+    </a>
   </script>
 
   <script>
@@ -59,8 +67,12 @@
     })
 
     Vue.component('rf-glyphbutton', {
-      props: ['icon', 'look', 'click'],
-      template: '<a v-on:click="click" :class="\'btn btn-xs btn-\' + look"><rf-glyph :icon="icon"></rf-icon><slot></slot></a>'
+      props: {
+        icon: { type: String, required: true },
+        look: { type: String, default: 'default' },
+        click: { type: Function, required: true }
+      },
+      template: '#glyphbutton-template'
     })
 
     Vue.component('rf-manifest', {
@@ -128,6 +140,14 @@
           this.opened = false
           this.loaded = false
           this.manifests = []
+        },
+
+        toggle: function () {
+          if (this.opened) {
+            this.close()
+          } else {
+            this.load()
+          }
         }
 
       }
