--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <script type="text/x-template" id="glyphbutton-template">
     <a v-on:click="click" :class="'btn btn-xs btn-' + look">
-      <rf-glyph :icon="icon"></rf-icon><slot></slot>
+      <rf-glyph :icon="icon"></rf-glyph><slot></slot>
     </a>
   </script>
 
