--- a/index.html
+++ b/index.html
@@ -17,17 +17,25 @@
     <div class="panel panel-default">
       <div class="panel-heading">
         <div class="row">
-          <div class="col-xs-6"><rf-glyph :icon="opened ? 'folder-open' : 'folder-close'"></rf-glyph> {{ repository }}</div>
-          <div class="col-xs-6 text-right">
-            <rf-glyphbutton v-if="loaded" :click="load" icon="refresh"></rf-glyphbutton>
-            <rf-glyphbutton :click="toggle" :icon="opened ? 'chevron-up' : 'chevron-down'"></rf-glyphbutton>
+          <div class="col-xs-4"><rf-glyph :icon="opened ? 'folder-open' : 'folder-close'"></rf-glyph> {{ repository }}</div>
+          <div class="col-xs-8 text-right">
+
+            <form class="form-inline">
+              <div v-if="loaded" :class="'input-group input-group-sm has-feedback ' + (tagfilterIsValid ? '' : 'has-error')">
+                <input v-model="tagfilter" type="text" class="form-control">
+                <span class="glyphicon glyphicon-filter form-control-feedback"></span>
+              </div>
+              <rf-glyphbutton v-if="loaded" :click="load" icon="refresh" size="sm"></rf-glyphbutton>
+              <rf-glyphbutton :click="toggle" :icon="opened ? 'chevron-up' : 'chevron-down'" size="sm"></rf-glyphbutton>
+            </form>
+
           </div>
         </div>
       </div>
       <div v-if="opened" class="list-group">
         <div v-if="!loaded" class="list-group-item"><rf-glyph icon="hourglass"></rf-glyph> Loading manifests</div>
         <div v-if="loaded && manifests.length == 0" class="list-group-item"><rf-glyph icon="info-sign"></rf-glyph> No manifests in repository</div>
-        <rf-manifest v-for="manifest in manifests" :manifest="manifest" :repository="repository" v-on:deleted="load"></rf-manifest>
+        <rf-manifest v-for="manifest in manifests" v-if="!isManifestFiltered(manifest)" :manifest="manifest" :repository="repository" v-on:deleted="load"></rf-manifest>
       </div>
     </div>
   </script>
@@ -52,7 +60,7 @@
   </script>
 
   <script type="text/x-template" id="glyphbutton-template">
-    <a v-on:click="click" :class="'btn btn-xs btn-' + look">
+    <a v-on:click="click" :class="'btn btn-' + size + ' btn-' + look">
       <rf-glyph :icon="icon"></rf-glyph><slot></slot>
     </a>
   </script>
@@ -80,7 +88,8 @@
       props: {
         icon: { type: String, required: true },
         look: { type: String, default: 'default' },
-        click: { type: Function, required: true }
+        click: { type: Function, required: true },
+        size: { type: String, default: 'xs' }
       },
       template: '#glyphbutton-template'
     })
@@ -128,8 +137,19 @@
         opened: false,
         loaded: false,
         pendingRequests: 0,
+        tagfilter: '',
         manifests: []
       }},
+      computed: {
+        tagfilterIsValid: function () {
+          try {
+            new RegExp(this.tagfilter)
+            return true
+          } catch (e) {
+            return false
+          }
+        }
+      },
       template: '#repository-template',
       methods: {
 
@@ -183,6 +203,15 @@
           } else {
             this.load()
           }
+        },
+
+        isManifestFiltered: function (manifest) {
+          if (!this.tagfilterIsValid) {
+            return false
+          }
+
+          var re = new RegExp(this.tagfilter)
+          return !manifest.tags.some((t) => t.match(re))
         }
 
       }
